# opengl-3d-engine

./: .gitignore  CMakeLists.txt  Includes.h  glad.c  main.cpp
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  Source.cpp  Source.orig.cpp
OpenGL/Resources/Models/: Truck.blend1  VAB.mtl  VAB_building.fbx  cone.fbx
OpenGL/Resources/Models/SLS/: ML.mtl  SLS.blend  SLS.blend1  SLS.mtl  SLS_Frame.blend
OpenGL/Resources/Shaders/: Basic_shader.frag  Basic_shader.vert  skybox_frag.glsl
OpenGL/Resources/Textures/: SLS_CoreStage.psd
Resources/Models/: Truck.blend  Truck.mtl  VAB.fbx  VAB.mtl
Resources/Models/SLS/: ML.mtl  SLS.blend  SLS.blend1  SLS.mtl  SLS_Frame.blend  SLS_Frame.blend1
Resources/Shaders/: skybox_vert.glsl
Resources/Textures/Truck/: Truck_1.psd
lib/CoreStructures/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Circle.cpp  Circle.h  FloatImage.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Noise.h  NoiseImages.cpp  NoiseImages.h  PerlinNoise.cpp  PerlinNoise.h  PrincipleAxes.cpp  PrincipleAxes.h  ScreenAlignedQuad.cpp  ScreenAlignedQuad.h  ShaderLoader.cpp  ShaderLoader.h  SkinnedMesh.cpp  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.cpp  TextureLoader.h  TexturedQuad.cpp  TexturedQuad.h  Timer.cpp  Timer.h
lib/CoreStructures/Shaders/: basic_shader.frag  basic_shader.vert  basic_texture.frag  basic_texture.vert  line_shader.frag  line_shader.vert  terrain_shader.frag  terrain_shader.vert  text_shader.frag  text_shader.vert
